--- a/.github/workflows/ai.yml
+++ b/.github/workflows/ai.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Install Python packages
       run: |
         python -m pip install --upgrade pip
-        pip install imgocr onnxruntime numpy Pillow opencv-python pymupdf requests tqdm
+        pip install imgocr onnxruntime numpy Pillow opencv-python pymupdf requests tqdm openai
 
     - name: Run OCR script
       run: python main.py
